vlib/v/checker/tests/array_builtin_redefinition.out
vlib/v/checker/tests/array_builtin_redefinition.vv:7:1: error: method overrides built-in array method
    5 | // fn (a []Abc) repeat() int { return 0 }
    6 | // fn (a []Abc) reverse() int { return 0 }
    7 | fn (a []Abc) map() int { return 0 }
      | ~~~~~~~~~~~~~~~~~~~~~~
    8 | // fn (a []Abc) slice() int { return 0 }
    9 | // fn (a []Abc) sort() int { return 0 }
